# rust-vercel-function-test

./: .gitignore  README  go.mod
api/: Cargo.toml  pi.rs  user.rs
