[package]
name = "index"
version = "1.0.0"
authors = [ "Your Name <your@site.com>" ]
edition = "2018"

[dependencies]
bigint = "4.4.3"
http = "0.1"
num-bigint = "0.4.2"
serde_json = "1.0.68"
vercel_lambda = "*"

[lib]
name = "util"
path = "_util.rs"

[[bin]]
name = "pi"
path = "/Users/byrdj5d/Sites/nextjs-blog/api/pi.rs"
